# objectify

./: README.md  pyproject.toml
src/objectify/: __init__.py
src/objector/: __init__.py
