[tool.poetry]
name = "objector"
version = "2020.11.0a1"
description = "Object recursion, mapping, and iteration tools"
authors = ["Shane R. Spencer <305301+whardier@users.noreply.github.com>"]
homepage = "https://github.com/whardier/objector"
repository = "https://github.com/whardier/objector"
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
"Funding" = "https://github.com/sponsors/whardier"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autoflake = "*"
bandit = "*"
black = {version = "*", allow-prereleases = true}
flake8 = "*"
flake8-bugbear = "*"
hypothesis = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
rope = "*"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
